Fixed map support for printing on Safari / Firefox(No Canvas).

--- a/assets/css/modeify.css
+++ b/assets/css/modeify.css
@@ -1,5 +1,17 @@
 /* required styles */
 
+html
+{
+	height:100%;
+	width: 100%;
+}
+
+div.dummyMap
+{
+	position:relative;height:100%;width:100%; z-index:9999; background:#FFF;
+}
+p.p_d_title { text-align: center; font-size: 18px; padding: 20px 0 0 0; }
+@media print { * { -webkit-print-color-adjust: exact; } }
 .leaflet-pane,
 .leaflet-tile,
 .leaflet-marker-icon,
